tests/skip/use-skipped-getter-2.stderr
error[E0599]: no method named `unused_1` found for struct `Sparse` in the current scope
  --> $DIR/use-skipped-getter-2.rs:13:23
   |
4  | / #[derive(Debug)]
5  | | pub struct Sparse {
6  | |     #[skip(getters, setters)]
7  | |     unused_1: B7,
8  | |     a: bool,
9  | | }
   | |_- method `unused_1` not found for this
...
13 |       assert_eq!(sparse.unused_1(), 0xFE); // ERROR!
   |                         ^^^^^^^^ method not found in `Sparse`
